fix(TruncatedQuery): wrap message

--- a/src/components/TruncatedQuery/TruncatedQuery.scss
+++ b/src/components/TruncatedQuery/TruncatedQuery.scss
@@ -5,9 +5,13 @@
     white-space: pre;
     word-break: break-word;
 
-    &_color {
-        &_secondary {
-            color: var(--yc-color-text-secondary);
+    &__message {
+        white-space: pre-wrap;
+
+        &_color {
+            &_secondary {
+                color: var(--yc-color-text-secondary);
+            }
         }
     }
 }
